Minor fix to CSS since nested CSS is not too widely supported

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -5,7 +5,10 @@
   right: 25px;
   height: 200px;
   opacity: 0.8;
-  @media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 768px) {
+  .moe {
     display: none;
   }
 }
